plugin validation file params